[package]
name = "traidingfloor-installer"
version = "0.1.0"
description = "Native installer + launcher for TrAIding Floor (wraps Docker)"
authors = ["TrAIding Floor"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
which = "6"
dirs = "5"
open = "5"
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }

[features]
# This feature is used for production builds where `devUrl` points to the
# frontend dev server. Don't enable for production.
custom-protocol = ["tauri/custom-protocol"]
